--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -124,10 +124,10 @@
     </div>
     <h2 th:text="'Рыба:'" />
     <div class="checkbox">
-    <cb><input type="checkbox" name= "ingredients" value="Лосось" id="24">Лосось</input></cb>
-    <cb><input type="checkbox" name= "ingredients" value="Треска" id="25">Треска</input></cb>
-    <cb><input type="checkbox" name= "ingredients" value="Окунь" id="26">Окунь</input></cb>
-    <cb><input type="checkbox" name= "ingredients" value="Горбуша" id="27">Горбуша</input></cb><br/>
+    <cb><input type="checkbox" name= "ingredients" value="осось" id="24">Лосось</input></cb>
+    <cb><input type="checkbox" name= "ingredients" value="реска" id="25">Треска</input></cb>
+    <cb><input type="checkbox" name= "ingredients" value="кунь" id="26">Окунь</input></cb>
+    <cb><input type="checkbox" name= "ingredients" value="орбуша" id="27">Горбуша</input></cb><br/>
     </div>
 
     <h2 th:text="'Мясо:'" />
@@ -145,7 +145,7 @@
         <cb><input type="checkbox" name= "ingredients" value="Утка" id="85">Утка</input></cb>
         <cb><input type="checkbox" name= "ingredients" value="рылышки" id="86">Крылышки</input></cb>
         <cb><input type="checkbox" name= "ingredients" value="голень" id="87">Голень</input></cb>
-        <c2><input type="checkbox" name= "ingredients" value="Индейка" id="88">Индейка</input></c2><br/>
+        <c2><input type="checkbox" name= "ingredients" value="ндейк" id="88">Индейка</input></c2><br/>
     </div>
 
     <h2 th:text="'Крупы:'"/>
