--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -107,7 +107,7 @@
     <cb><input type="checkbox" name= "ingredients" value="Карто" id="7">Картофель</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Огур" id="8">Огурцы</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Лук репчатый" id="9">Лук репчатый</input></cb>
-    <cb><input type="checkbox" name= "ingredients" value="Свекла" id="10">Свекла</input></cb>
+    <cb><input type="checkbox" name= "ingredients" value="Свёкла" id="10">Свекла</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Перец (сладкий)" id="11">Сладкий перец</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Капуста" id="12">Капуста белокочанная</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Цветная капуста" id="13">Цветная капуста</input></cb>
@@ -133,8 +133,8 @@
     <h2 th:text="'Мясо:'" />
     <div class="checkbox">
     <cb><input type="checkbox" name= "ingredients" value="Фарш" id="28">Фарш</input></cb>
-    <cb><input type="checkbox" name= "ingredients" value="Говядина" id="29">Говядина</input></cb>
-    <cb><input type="checkbox" name= "ingredients" value="Свинина" id="30">Свинина</input></cb>
+    <cb><input type="checkbox" name= "ingredients" value="овядина" id="29">Говядина</input></cb>
+    <cb><input type="checkbox" name= "ingredients" value="винина" id="30">Свинина</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="рёбрышки" id="31">Свиные рёбрышки</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Печень" id="32">Печень</input></cb><br/>
     </div>
@@ -191,7 +191,7 @@
     <cb><input type="checkbox" name= "ingredients" value="Зелёный лук" id="65">Зелёный лук</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Мята" id="66">Мята</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="елень" id="67">Петрушка/укроп</input></cb>
-    <cb><input type="checkbox" name= "ingredients" value="Кинза" id="68">Кинза</input></cb>
+    <cb><input type="checkbox" name= "ingredients" value="инза" id="68">Кинза</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Щавель" id="69">Щавель</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Крапива" id="70">Крапива</input></cb>
     <cb><input type="checkbox" name= "ingredients" value="Лавровый" id="71">Лавровый лист</input></cb>
