--- a/src/main/resources/templates/output/recipes.html
+++ b/src/main/resources/templates/output/recipes.html
@@ -26,7 +26,8 @@
 
         }
         BODY {
-            background: url(/img/oboi.jpeg) no-repeat, url(/img/kot-est-piccu.jpg) 0 800px no-repeat, url(/img/oboi2.jpg) 300px 6000px no-repeat ; /* Путь к графическому файлу со вторым фоном */
+            background: url(/img/oboi.jpeg) no-repeat, url(/img/kot-est-piccu.jpg) 0 1000px no-repeat, url(/img/oboi2.jpg) 0 2500px no-repeat,  url(/img/Oboi3.jpg) 0 4000px no-repeat, url(/img/oboi2.jpg) 0 5000px no-repeat, url(/img/oboi2.jpg) 0 7000px no-repeat ; /* Путь к графическому файлу со вторым фоном */
+            background-size: 100%;
         }
     </style>
 </head>
