--- a/src/main/resources/templates/output/notFound.html
+++ b/src/main/resources/templates/output/notFound.html
@@ -6,7 +6,7 @@
     <style>
         BODY {
             background: url(/img/notFoundIngredients.png);
-            background-size: 100%;/* Путь к графическому файлу со вторым фоном */
+            background-size: 100%;
         }
         H1 {
             position: absolute;
