--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -218,5 +218,6 @@
 </form>
 <h1 th:text="'Или найдите блюдо себе по вкусу из подборки простых повседневных рецептов:'" />
 <a class="my_link" href="/allRecipes">Найти рецепт</a>
+<a class="my_link" href="/add">Добавить свой рецепт</a>
 </body>
 </html>
