--- a/src/main/resources/templates/output/404exception.html
+++ b/src/main/resources/templates/output/404exception.html
@@ -40,5 +40,6 @@
 <h1 th:text="Что-то пошло не так, но не повод огорчаться! Попробуйте вернуться на главную страничку и пометить галочками те ингредиенты, которые у вас есть, и затем нажать на кнопочку поиска, а мы в свою очередь попытаемся найти подходящий рецепт: ">text</h1>
 <p> <a class="my_link">link</a></p>
 <h2 th:text="404 - PageNotFound">value</h2>
+<a th:width="100px" th:height="auto" th:src="@{img/milk.gif}">img</a>
 </body>
 </html>
