--- a/src/main/resources/templates/output/recepts.html
+++ b/src/main/resources/templates/output/recepts.html
@@ -17,13 +17,13 @@
             line-height: 1.5;
         }
         .my_return {
-            position: absolute;
-            left: 50%;
-            transform: translate(-50%, 0);
+            position: sticky;
+            left: 80%;
+            bottom: 10px;
             font-size: 120%;
             color: coral;
             font-family: Verdana, cursive;
-            text-align: center
+            text-align: right;
         }
         .my_gif{
             position: absolute;
